--- a/index.html
+++ b/index.html
@@ -47,19 +47,20 @@
     <div id="mapDiv">
       <h2>Where I've Lived and Worked</h2>
     </div>
-    <div class="row">
+    <div class="row" id="footer" >
       <div id="letsConnect" class="dark-gray" class="small-12 columns">
         <h2 class="orange center-text">Let's Connect</h2>
         <ul id="footerContacts" class="center-content" class="flex-box"></ul>
       </div>
     </div>
-    <div id="myModal" class="reveal-modal" data-reveal>
-        <!--<a class="close-reveal-modal">&#215;</a>-->
+    <div class="row" id="modals">
     </div>
+   
   </div>
 
-  <script src="js/helper.js"></script>
-  <script src="js/resumeBuilder.js"></script>
+ <!-- <script src="js/helper.js"></script>
+  <script src="js/resumeBuilder.js"></script>-->
+  <script src="js/main.js"></script>
   <script>
 
    $(document).foundation();
